2007-12-14  Dan Winship  <danw@gnome.org>

	* libsoup/soup-uri.c: Rename from SoupUri to SoupURI. Use the
	slice allocator and register as a boxed type.
	(SoupURI): Rename "protocol" field to "scheme" and "passwd" to
	"password". Make scheme an interned string. Replace
	SOUP_PROTOCOL_HTTPS with soup_uri_is_https().

	* *.c: update
	
2007-12-14  Dan Winship  <danw@gnome.org>

	* libsoup/Makefile.am: Use glib-mkenums to build soup-enum-types.c
	and soup-enum-types.h

	* libsoup/soup-address.h (SoupAddressFamily): redo this definition
	again, to make glib-mkenums happy.

2007-12-13  Dan Winship  <danw@gnome.org>

	* libsoup/soup-xmlrpc.c: New easier-to-use and
	easier-to-do-language-bindings-of XML-RPC code.

	* libsoup/soup-xmlrpc-message.c: 
	* libsoup/soup-xmlrpc-response.c: gone

	* libsoup/soup-value-utils.c: Utilites for working with
	GValueArray, and GHashTables of GValues, used by soup-xmlrpc.

	* tests/getbug.c: 
	* tests/xmlrpc-test.c: Update to use new XML-RPC stuff

2007-12-13  Dan Winship  <danw@gnome.org>

	* libsoup/soup-date.c: Make a SoupDate type, and redo in terms of
	that rather than struct tm and time_t. Also be much more liberal
	when parsing.

	* libsoup/soup-xmlrpc-message.c (soup_xmlrpc_message_write_datetime): 
	* libsoup/soup-xmlrpc-response.c (soup_xmlrpc_value_get_datetime):
	Use SoupDate.

	* tests/date.c: Use SoupDate, test parsing lots more formats

	* tests/xmlrpc-test.c: update for SoupDate

2007-12-12  Dan Winship  <danw@gnome.org>

	* libsoup/soup-message.c: 
	* libsoup/soup-message-private.h: Remove SoupMessageStatus,
	msg->status, and soup_message_io_* from the public API, as they
	all really belong to the session, not the message. (For now
	they've just been moved to soup-message-private.h, but some day
	they'll be fully refactored away from SoupMessage.)

	* libsoup/soup-server.c (soup_server_pause_message)
	(soup_server_unpause_message): 
	* libsoup/soup-session.c (soup_session_pause_message)